# Quoter

./: Footer.xlsx  Header.xlsx  Price List.xlsx  README.md  app.py  final_quote.xlsx  pyproject.toml  quote_output.xlsx
